week6_tutorials_assignments/week6_assignments/evidently_monitor_deployment/evidently-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evidently-service
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: server
  selector:
    app: evidently-monitor
