week6_tutorials_assignments/week6_assignments/evidently_monitor_deployment/evidently-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evidently-monitor-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.il/add-base-url: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: evidently-monitor-ui.local
    http:
      paths:
        - backend:
            service:
              name: evidently-service
              port:
                number: 8000
          path: /
          pathType: Prefix
